# task_manager

./: .gitignore  CMakeLists.txt
include/: Database.hpp  GUI.hpp  Task.hpp
src/: Database.cpp  GUI.cpp  main.cpp  test_sfml.cpp
